--- a/TnTComponents/TnTSideBarListItem.razor
+++ b/TnTComponents/TnTSideBarListItem.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TnTIconComponent
 
-<li class="@Class">
+<li class="@GetClass()">
     <NavLink href="@Href">
         @GetIcon()
         @ChildContent
