--- a/TnTComponents/Forms/TnTFormField.razor
+++ b/TnTComponents/Forms/TnTFormField.razor
@@ -3,12 +3,12 @@
 
 <div class="tnt-input-field @GetFromType() @(Active ? "active" : string.Empty)" theme="@Theme">
     @GetIcon()
-    <input type="text"
+    <input type="@InputType"
            disabled="@Disable"
            placeholder="@Placeholder"
            @bind="@Value"
            @bind:event="oninput"
-           @onchange="@((args => ValueChanged.InvokeAsync((TInputType?)args?.Value)))"
+           @onchange="OnChange"
            @onfocusin=@(() => Active = true)
            @onfocusout=@(() => Active = false)>
 
@@ -24,52 +24,3 @@
     <span class="helper-text">@HelperText</span>
 }
 
-
-@code {
-    [CascadingParameter]
-    public TnTForm? ParentForm { get; set; }
-
-    [Parameter]
-    public string Label { get; set; } = default!;
-
-    [Parameter]
-    public string Placeholder { get; set; } = " ";
-
-    [Parameter]
-    public bool Disable { get; set; } = false;
-
-    [Parameter]
-    public TInputType? Value { get; set; }
-
-    [Parameter]
-    public string? Format { get; set; }
-
-    [Parameter]
-    public EventCallback<TInputType?> ValueChanged { get; set; }
-
-    [Parameter]
-    public string? HelperText { get; set; }
-
-    [Parameter]
-    public FormType FormType { get; set; }
-
-    protected bool Active;
-
-
-    protected override void OnInitialized() {
-        if (ParentForm is not null) {
-            FormType = ParentForm.FormType;
-            Theme = ParentForm.Theme;
-        }
-    }
-
-    protected string GetFromType() {
-        switch (FormType) {
-            case FormType.Outlined: return "outlined";
-            case FormType.Filled: return "filled";
-            default:
-                return string.Empty;
-        }
-    }
-
-}
