--- a/TnTComponents/TnTCard.razor
+++ b/TnTComponents/TnTCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TnTBaseComponent
 
-<div class="tnt-card @GetCardType()" theme="@Theme">
+<div class="@GetClass()" theme="@Theme">
     @ChildContent
 </div>
 
@@ -12,6 +12,13 @@
     [Parameter]
     public CardType CardType { get; set; }
 
+    [Parameter]
+    public override string BaseCssClass { get; set; } = "tnt-card";
+
+
+    protected override string GetClass() {
+        return $"{base.GetClass()} {GetCardType()}";
+    }
 
     private string GetCardType() {
         switch (CardType) {
