--- a/TnTComponents/Styles/Components/forms/_numeric.scss
+++ b/TnTComponents/Styles/Components/forms/_numeric.scss
@@ -1,3 +1,27 @@
-﻿.tnt-form > .tnt-input-field > .tnt-numeric-input-button {
-   background-color:red;
+﻿.tnt-form > .tnt-input-field {
+
+   .tnt-numeric-input-button {
+      background-color: transparent;
+      visibility: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      padding: 0;
+      width: 1rem;
+      height: 1rem;
+
+      &:hover {
+         background-color: #00000022;
+      }
+
+      & > i {
+         font-size: 1.25rem;
+      }
+   }
+
+   &:hover .tnt-numeric-input-button {
+      visibility: visible;
+   }
 }
