Fixed theming for dark screens

--- a/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
@@ -109,6 +109,23 @@
 
         <TnTCard CardType="CardType.Outlined">
             <TnTButton ButtonType="ButtonType.Outlined" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Flat" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Filled" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Default" Text="Text"></TnTButton>
+        </TnTCard>
+
+        <TnTCard CardType="CardType.Filled">
+            <TnTButton ButtonType="ButtonType.Outlined" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Flat" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Filled" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Default" Text="Text"></TnTButton>
+        </TnTCard>
+
+        <TnTCard CardType="CardType.Flat">
+            <TnTButton ButtonType="ButtonType.Outlined" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Flat" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Filled" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Default" Text="Text"></TnTButton>
         </TnTCard>
     </TnTBody>
 </TnTLayout>
