--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,6 +1,4 @@
-﻿@import 'Common/_default_theme.scss';
-@import 'Common/_common.scss';
-@import 'Common/_grid.scss';
+﻿@import 'Common/_grid.scss';
 @import 'Components/_body.scss';
 @import 'Components/_header.scss';
 @import 'Components/_card.scss';
@@ -8,6 +6,10 @@
 @import 'Components/_buttons.scss';
 @import 'Components/_stack.scss';
 @import 'Components/forms/_form.scss';
+
+body[theme=default] {
+   background-color: $tnt-color-surface;
+}
 
 body {
    margin: 0px;
