--- a/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
@@ -7,14 +7,14 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="_content/TnTComponents/style.css" />
+    <link rel="stylesheet" href="_content/TnTComponents/style.dark.css" />
     <link rel="stylesheet" href="TnTComponents.Server.styles.css" />
     <link rel="stylesheet" href="TnTComponents.Client.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
 
-<body>
+<body theme="default">
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/TnTComponents/TnTComponents.js"></script>
