--- a/TnTComponents/Styles/Common/_common.scss
+++ b/TnTComponents/Styles/Common/_common.scss
@@ -3,43 +3,43 @@
 }
 
 .tnt-z-depth-1 {
-   box-shadow: 0px 1px 2px rgba(69,73,79,0.3), 0px 1px 3px 1px rgba(69,73,79,0.15);
+   box-shadow: 0px 1px 2px rgba(69,73,79,0.3), 0px 1px 3px 1px $tnt-color-shadow;
 }
 
 .tnt-z-depth-2 {
-   box-shadow: 0px 1px 2px rgba(69,73,79,0.3), 0px 2px 6px 2px rgba(69,73,79,0.15);
+   box-shadow: 0px 1px 2px rgba(69,73,79,0.3), 0px 2px 6px 2px $tnt-color-shadow;
 }
 
 .tnt-z-depth-3 {
-   box-shadow: 0px 4px 8px 3px rgba(69,73,79,0.15), 0px 1px 3px rgba(69,73,79,0.3);
+   box-shadow: 0px 4px 8px 3px rgba(69,73,79,0.15), 0px 1px 3px $tnt-color-shadow;
 }
 
 .tnt-z-depth-4 {
-   box-shadow: 0px 6px 10px 4px rgba(69,73,79,0.15), 0px 2px 3px rgba(69,73,79,0.3);
+   box-shadow: 0px 6px 10px 4px rgba(69,73,79,0.15), 0px 2px 3px $tnt-color-shadow;
 }
 
 .tnt-z-depth-5 {
-   box-shadow: 0px 8px 12px 6px rgba(69,73,79,0.15), 0px 4px 4px rgba(69,73,79,0.3);
+   box-shadow: 0px 8px 12px 6px rgba(69,73,79,0.15), 0px 4px 4px $tnt-color-shadow;
 }
 
 .tnt-z-depth-6 {
-   box-shadow: 0px 12px 16px 6px rgba(69,73,79,0.15), 0px 4px 6px rgba(69,73,79,0.3);
+   box-shadow: 0px 12px 16px 6px rgba(69,73,79,0.15), 0px 4px 6px $tnt-color-shadow;
 }
 
 .tnt-z-depth-7 {
-   box-shadow: 0px 16px 20px 6px rgba(69,73,79,0.15), 0px 6px 6px rgba(69,73,79,0.3);
+   box-shadow: 0px 16px 20px 6px rgba(69,73,79,0.15), 0px 6px 6px $tnt-color-shadow;
 }
 
 .tnt-z-depth-8 {
-   box-shadow: 0px 20px 24px 6px rgba(69,73,79,0.15), 0px 6px 8px rgba(69,73,79,0.3);
+   box-shadow: 0px 20px 24px 6px rgba(69,73,79,0.15), 0px 6px 8px $tnt-color-shadow;
 }
 
 .tnt-z-depth-9 {
-   box-shadow: 0px 24px 28px 6px rgba(69,73,79,0.15), 0px 8px 8px rgba(69,73,79,0.3);
+   box-shadow: 0px 24px 28px 6px rgba(69,73,79,0.15), 0px 8px 8px $tnt-color-shadow;
 }
 
 .tnt-z-depth-10 {
-   box-shadow: 0px 28px 32px 6px rgba(69,73,79,0.15), 0px 8px 10px rgba(69,73,79,0.3);
+   box-shadow: 0px 28px 32px 6px rgba(69,73,79,0.15), 0px 8px 10px $tnt-color-shadow;
 }
 
 .tnt-border-radius-0 {
