--- a/TnTComponents/Styles/Common/_default_theme.dark.scss
+++ b/TnTComponents/Styles/Common/_default_theme.dark.scss
@@ -1,30 +1,34 @@
- $tnt-color-primary: $tnt-color-primary-dark;
- $tnt-color-on-primary: $tnt-color-on-primary-dark;
- $tnt-color-primary-container: $tnt-color-primary-container-dark;
- $tnt-color-on-primary-container: $tnt-color-on-primary-container-dark;
- $tnt-color-secondary: $tnt-color-secondary-dark;
- $tnt-color-on-secondary: $tnt-color-on-secondary-dark;
- $tnt-color-secondary-container: $tnt-color-secondary-container-dark;
- $tnt-color-on-secondary-container: $tnt-color-on-secondary-container-dark;
- $tnt-color-tertiary: $tnt-color-tertiary-dark;
- $tnt-color-on-tertiary: $tnt-color-on-tertiary-dark;
- $tnt-color-tertiary-container: $tnt-color-tertiary-container-dark;
- $tnt-color-on-tertiary-container: $tnt-color-on-tertiary-container-dark;
- $tnt-color-error: $tnt-color-error-dark;
- $tnt-color-on-error: $tnt-color-on-error-dark;
- $tnt-color-error-container: $tnt-color-error-container-dark;
- $tnt-color-on-error-container: $tnt-color-on-error-container-dark;
- $tnt-color-outline: $tnt-color-outline-dark;
- $tnt-color-background: $tnt-color-background-dark;
- $tnt-color-on-background: $tnt-color-on-background-dark;
- $tnt-color-surface: $tnt-color-surface-dark;
- $tnt-color-on-surface: $tnt-color-on-surface-dark;
- $tnt-color-surface-variant: $tnt-color-surface-variant-dark;
- $tnt-color-on-surface-variant: $tnt-color-on-surface-variant-dark;
- $tnt-color-inverse-surface: $tnt-color-inverse-surface-dark;
- $tnt-color-inverse-on-surface: $tnt-color-inverse-on-surface-dark;
- $tnt-color-inverse-primary: $tnt-color-inverse-primary-dark;
- $tnt-color-shadow: $tnt-color-shadow-dark;
- $tnt-color-surface-tint: $tnt-color-surface-tint-dark;
- $tnt-color-outline-variant: $tnt-color-outline-variant-dark;
- $tnt-color-scrim: $tnt-color-scrim-dark;
+@import '_default_colors_tokens.scss';
+@import '_default_typeography.scss';
+$tnt-color-primary: $tnt-color-primary-dark;
+$tnt-color-on-primary: $tnt-color-on-primary-dark;
+$tnt-color-primary-container: $tnt-color-primary-container-dark;
+$tnt-color-on-primary-container: $tnt-color-on-primary-container-dark;
+$tnt-color-secondary: $tnt-color-secondary-dark;
+$tnt-color-on-secondary: $tnt-color-on-secondary-dark;
+$tnt-color-secondary-container: $tnt-color-secondary-container-dark;
+$tnt-color-on-secondary-container: $tnt-color-on-secondary-container-dark;
+$tnt-color-tertiary: $tnt-color-tertiary-dark;
+$tnt-color-on-tertiary: $tnt-color-on-tertiary-dark;
+$tnt-color-tertiary-container: $tnt-color-tertiary-container-dark;
+$tnt-color-on-tertiary-container: $tnt-color-on-tertiary-container-dark;
+$tnt-color-error: $tnt-color-error-dark;
+$tnt-color-on-error: $tnt-color-on-error-dark;
+$tnt-color-error-container: $tnt-color-error-container-dark;
+$tnt-color-on-error-container: $tnt-color-on-error-container-dark;
+$tnt-color-outline: $tnt-color-outline-dark;
+$tnt-color-background: $tnt-color-background-dark;
+$tnt-color-on-background: $tnt-color-on-background-dark;
+$tnt-color-surface: $tnt-color-surface-dark;
+$tnt-color-on-surface: $tnt-color-on-surface-dark;
+$tnt-color-surface-variant: $tnt-color-surface-variant-dark;
+$tnt-color-on-surface-variant: $tnt-color-on-surface-variant-dark;
+$tnt-color-inverse-surface: $tnt-color-inverse-surface-dark;
+$tnt-color-inverse-on-surface: $tnt-color-inverse-on-surface-dark;
+$tnt-color-inverse-primary: $tnt-color-inverse-primary-dark;
+$tnt-color-shadow: $tnt-color-shadow-dark;
+$tnt-color-surface-tint: $tnt-color-surface-tint-dark;
+$tnt-color-outline-variant: $tnt-color-outline-variant-dark;
+$tnt-color-scrim: $tnt-color-scrim-dark;
+@import '_default_colors_module.scss';
+@import '_common.scss';
