--- a/TnTComponents/Styles/Components/_header.scss
+++ b/TnTComponents/Styles/Components/_header.scss
@@ -13,12 +13,12 @@
    transition: padding-left ease-in-out 150ms;
 }
 
-.tnt-header.expanded {
-   padding-left: $tnt-sidebar-width;
-}
-
-
 .tnt-header[theme=default] {
+
+   &.expanded {
+      padding-left: 250px;
+   }
+
    background-color: $tnt-color-primary;
    color: $tnt-color-on-primary;
    @extend .tnt-z-depth-1;
